Added exceptions and constants